2009-09-17  Brian Weinstein  <bweinstein@apple.com>

Reviewed by Adam Roben.

        Remove assertions that were being hit by calls to
        m_verticalScrollbar->invalidate(). These assertions were valid,
        but they were causing tests to fail, so replacing with a FIXME
        until we can find out the real cause/solution that is being tracked
        by http://webkit.org/b/29350.

        * WebView.cpp:
        (WebView::addToDirtyRegion):
        (WebView::paintIntoBackingStore):



Canonical link: https://commits.webkit.org/40061@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48496 268f45cc-cd09-0410-ab3c-d52691b4dbfc